--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,29 +6,27 @@ on:
     - dev
   pull_request:
 
-env:
-
 jobs:
-# Add "id-token" with the intended permissions.
+  Get_OIDC_ID_token:
+  # Add "id-token" with the intended permissions.
     permissions:
       contents: 'read'
       id-token: 'write'
       
+    runs-on: ubuntu-18.04
     steps:
     - uses: 'actions/checkout@v3'
 
     # Configure Workload Identity Federation via a credentials file.
     - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v0'
+      name: 'Authenticate to GCP'
+      uses: 'google-github-actions/auth@v0.3.1'
       with:
-        workload_identity_provider: 'projects/874395041100/locations/global/workloadIdentityPools/iac-pool/providers/github'
-        service_account: 'gh-actions@interstellar-14.iam.gserviceaccount.com'
-
-terraform:
-    name: 'Terraform'
-    runs-on: ubuntu-18.04
-
+          create_credentials_file: 'true'
+          workload_identity_provider: 'projects/874395041100/locations/global/workloadIdentityPools/iac-pool/providers/github'
+          service_account: 'gh-actions@interstellar-14.iam.gserviceaccount.com'
+  
+  terraform:
     defaults:
       run:
         shell: bash
