--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,19 +23,11 @@ jobs:
       uses: 'google-github-actions/auth@v0.3.1'
       with:
           create_credentials_file: 'true'
+          token_format: 'access_token'
           workload_identity_provider: 'projects/874395041100/locations/global/workloadIdentityPools/iac-pool/providers/github'
           service_account: 'gh-actions@interstellar-14.iam.gserviceaccount.com'
-  
-  terraform:
-    defaults:
-      run:
-        shell: bash
-
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+          access_token_lifetime: '300s' # optional, default: '3600s' (1 hour)
 
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
+    - run: |-
+        terraform init -var "access_token=${{ steps.auth.outputs.access_token }}" -backend-config="prefix=tf-state"
