--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,4 +30,4 @@ jobs:
 
 
     - run: |-
-        terraform init -var "access_token=${{ steps.auth.outputs.access_token }}" -backend-config="prefix=tf-state" -backend-config="ar-tf-state"
+        terraform init -var "access_token=${{ steps.auth.outputs.access_token }}" -backend-config="prefix=tf-state" -backend-config="../../../backend.tf"
