--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,3 +34,15 @@ jobs:
       
     - name: Terraform Init
       run: terraform init
+      
+    # Checks that all Terraform configuration files adhere to a canonical format
+    - name: Terraform Format
+      run: terraform fmt -check
+      
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      run: terraform plan
+      
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/prod' && github.event_name == 'push'
+      run: terraform apply -auto-approve
