--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
       contents: 'read'
       id-token: 'write'
       
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: 'actions/checkout@v3'
 
