--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,16 +40,17 @@ jobs:
       
     - name: Terraform Init
       run: terraform init
-      
-#    - run: terraform force-unlock -force 1650849042927182
-            
-    # Checks that all Terraform configuration files adhere to a canonical format 
-    #- name: Terraform Format
-     # run: terraform fmt -check
-      
-    # Generates an execution plan for Terraform
+
     - name: Terraform Plan
-      run: terraform plan
+      run: terraform plan -out=tfplan
+      
+    - name: Install OPA
+      uses: open-policy-agent/action-opa@v1
+      with:
+        version: 'latest'
+      
+    - name: Run OPA Evaluation
+      run: opa eval -i tfplan -d policies/opa_policy.rego "data.terraform.analysis.authz"
       
     - name: Terraform Apply
       if: github.ref == 'refs/heads/prod' && github.event_name == 'push'
