--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,12 +37,7 @@ jobs:
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-####
-    - name: Terraform Destroy
-      run: |
-        terraform init
-        terraform destroy -target=module.sf-poc --auto-approve
-####
+
     - name: Terraform Init
       run: terraform init
 
@@ -63,11 +58,4 @@ jobs:
       
     - name: Terraform Apply
       if: github.ref == 'refs/heads/prod' && github.event_name == 'push'
-      run: terraform apply -auto-approve || echo "Terraform Apply failed, but continuing with the workflow"
-
-####
-    - name: Terraform Destroy
-      run: |
-        terraform init
-        terraform destroy -target=module.sf-poc --auto-approve
-####
+      run: terraform apply -auto-approve
